Fixing alignment of md-datepicker-container in inline filters mode

--- a/src/app/styles/directives/_lister.scss
+++ b/src/app/styles/directives/_lister.scss
@@ -146,6 +146,10 @@
                 }
             }
 
+            md-datepicker-container {
+                width: 100%;
+            }
+
             .main-search-bar {
                 md-input-container {
                     width: 100%;
